# openai-privacy-filter-coreml

./: .gitignore  LICENSE  Package.swift  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task.md
.github/workflows/: python-smoke.yml
Sources/PrivacyFilterTokenizer/: PrivacyFilterTokenizer.swift
docs/: conversion-plan.md  current-results.md  mac-performance-summary.md  performance.md  project-backlog.md  results.md  roadmap.md  technical-notes.md
fixtures/: privacy_samples.json
scripts/: benchmark_coreml_mlx.py  check_environment.py  compare_coreml_logits.py  compare_coreml_mlx_logits.py  compress_coreml_model.py  convert_privacy_filter_coreml.py  create_github_project.sh  export_tokenizer_fixtures.py  populate_github_project.sh  run_mlx_privacy_filter.py  run_transformers_privacy_filter.py
src/privacy_filter_coreml/: __init__.py  bioes.py  mlx_openai_privacy_filter.py  transformers_patch.py  viterbi.py
tests/: test_decode.py
tests/PrivacyFilterTokenizerTests/: PrivacyFilterTokenizerTests.swift
tests/PrivacyFilterTokenizerTests/Resources/: tokenizer_baseline_128.json
